WikimediaUI theme: Align TagItemWidget's close icon correctly
Fix TagItemWidget's close icon position within the button.

--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -1538,7 +1538,7 @@
 			}
 
 			.oo-ui-icon-close {
-				left: @margin-tagitem;
+				left: @margin-tagitem - @size-modifier-border;
 				min-width: @min-size-icon-small;
 				width: @size-icon-small;
 			}
